argocd/k8s/bentopdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  namespace: bentopdf
  labels:
    app: bentopdf
    homelab.io/glance-visible: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: bentopdf
      homelab.io/glance-visible: "true"
  template:
    metadata:
      labels:
        app: bentopdf
        homelab.io/glance-visible: "true"
    spec:
      securityContext:
        fsGroup: 101
        runAsGroup: 101
        runAsNonRoot: true
        runAsUser: 101
      containers:
        - name: bentopdf
          image: "ghcr.io/alam00000/bentopdf-simple:2.8.8"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 128Mi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: nginx-tmp
              mountPath: /var/lib/nginx/tmp
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: nginx-etc-tmp
              mountPath: /etc/nginx/tmp
      volumes:
        - name: nginx-tmp
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-etc-tmp
          emptyDir: {}
