argocd/k8s/bentopdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
  namespace: bentopdf
  labels:
    app: bentopdf
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: bentopdf
