argocd/k8s/bentopdf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bentopdf-http-route
  namespace: bentopdf
spec:
  parentRefs:
    - name: homelab-gw
      namespace: cilium-gateway
      sectionName: homelab-https
  hostnames:
    - "bentopdf.homelab.ikabbash.com" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
