argocd/k8s/bentopdf/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bentopdf
  namespace: bentopdf
specs:
  - endpointSelector:
      matchLabels:
        app: bentopdf
    ingress:
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: authentik
              app.kubernetes.io/instance: authentik
    egress:
      - {}
  - endpointSelector: {}
    ingress:
      - {}
    egress:
      - {}
